@@ -14,7 +14,7 @@
  
  * have gcc compiler and glibc devel package installed
  
- * have libpci and libpci-devel packages installed
+ * have pciutils and pciutils-devel packages installed
  
  
  Compile & install
@@ -39,3 +39,4 @@
     pciutils-2.1.10-33
     libgcc-3.2-39
     gcc-3.2-39
+
